fix: text align footer heading (#506)

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -162,7 +162,6 @@ right align for larger screen */
   }
 
   footer .columns > div > div:nth-child(5) > h1:not(:first-of-type){
-    text-align: right;
     margin-top: 30px;
   }
 }
